--- a/templates/index.html
+++ b/templates/index.html
@@ -37,123 +37,18 @@
         <div class="header-wrapper">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
-                    <div class="header-left-content text-center text-md-start"><p>به آژانس خلاق حرفه ای خوش آمدید</p>
+                    <div class="header-left-content text-center text-md-start"><p style="font-size:xx-large">NetXIoT</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <ul class="ps-0 mb-0 list-unstyled d-flex justify-content-center justify-content-md-end header-right-content gap-1 gap-sm-4 flex-wrap">
-                        <li><a href="mailto:information@stir.com">information@stir.com</a></li>
-                        <li><a href="tel:+52883256953129">+5288 32569 53129</a></li>
+                        <li><a href="mailto:ali.saranj1384@gmail.com">ali.saranj1384@gmail.com</a></li>
+                        <li><a href="tel:+989136978682">+989136978682</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-    </div>
-</div>
-<div class="navbar-area bg-black">
-    <div class="main-nav">
-        <div class="container mw-1680">
-            <nav class="navbar navbar-expand-md navbar-light"><a class="navbar-brand" href="index.html"><img
-                    src="{% static 'assets/images/white-logo.svg' %}" alt="logo"></a>
-                <div class="collapse navbar-collapse for-mobile-menu" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a href="#" class="nav-link dropdown-toggle active">صفحه اصلی</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="index.html" class="nav-link active">آژانس خلاق</a></li>
-                                <li class="nav-item"><a href="index-2.html" class="nav-link">آژانس بازرگانی</a></li>
-                                <li class="nav-item"><a href="index-3.html" class="nav-link">آژانس دیجیتال</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link dropdown-toggle">صفحات</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="about-us.html" class="nav-link">درباره ما</a></li>
-                                <li class="nav-item"><a href="team.html" class="nav-link">تیم</a></li>
-                                <li class="nav-item"><a href="faq.html" class="nav-link">سوالات متداول</a></li>
-                                <li class="nav-item"><a href="testimonials.html" class="nav-link">گواهینامه ها</a></li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link dropdown-toggle">احراز هویت</a>
-                                    <ul class="dropdown-menu">
-                                        <li class="nav-item"><a href="sign-in.html" class="nav-link">ورود</a></li>
-                                        <li class="nav-item"><a href="sign-up.html" class="nav-link">ثبت نام</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item"><a href="privacy-policy.html" class="nav-link">سیاست حفظ حریم
-                                    خصوصی</a></li>
-                                <li class="nav-item"><a href="terms-conditions.html" class="nav-link">شرایط و ضوابط</a>
-                                </li>
-                                <li class="nav-item"><a href="404.html" class="nav-link">خطا</a></li>
-                                <li class="nav-item"><a href="contact-us.html" class="nav-link">با ما تماس بگیرید</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link dropdown-toggle">خدمات</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="services.html" class="nav-link">خدمات</a></li>
-                                <li class="nav-item"><a href="service-details.html" class="nav-link">جزئیات خدمات</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link dropdown-toggle">مطالعه موردی</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="case-study.html" class="nav-link">مطالعه موردی</a></li>
-                                <li class="nav-item"><a href="cases-study-details.html" class="nav-link">جزئیات مطالعه
-                                    موردی</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link dropdown-toggle">خرید کنید</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="products.html" class="nav-link">محصولات</a></li>
-                                <li class="nav-item"><a href="cart.html" class="nav-link">سبد خرید</a></li>
-                                <li class="nav-item"><a href="checkout.html" class="nav-link">وارسی</a></li>
-                                <li class="nav-item"><a href="product-details.html" class="nav-link">جزئیات محصول</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a href="#" class="nav-link dropdown-toggle">وبلاگ</a>
-                            <ul class="dropdown-menu">
-                                <li class="nav-item"><a href="blog.html" class="nav-link">وبلاگ</a></li>
-                                <li class="nav-item"><a href="single-blog.html" class="nav-link">صفحه وبلاگ واحد</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <div class="nav-right-options d-flex align-items-center">
-                        <div class="language position-relative z-1">
-                            <select class="form-select" aria-label="Default select example">
-                                <option selected>زبان</option>
-                                <option value="1">انگلیسی</option>
-                                <option value="2">عربی</option>
-                                <option value="3">چین</option>
-                            </select><i class="fa-light fa-globe"></i>
-                        </div>
-                        <ul class="social-link ps-0 mb-0 list-unstyled">
-                            <li><a href="https://facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-                            </li>
-                            <li><a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-                            </li>
-                            <li><a href="https://instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                            </li>
-                            <li><a href="https://linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
-    </div>
-    <div class="mobile-nav">
-        <div class="container">
-            <div class="mobile-menu">
-                <div class="logo"><a href="index.html"><img src="{% static 'assets/images/white-logo.svg' %}"
-                                                            alt="logo"></a></div>
-            </div>
-        </div>
+        <br>
     </div>
 </div>
 <div class="banner-area bg-black bg-img" data-background="{% static '/assets/images/banner-bg-shape.png' %}">
@@ -165,8 +60,7 @@
                 <h1 class="mb-0">ما یک آژانس خلاق مدرن هستیم</h1>
                 <h1>بر اساس<span>کانادا</span>
                 </h1>
-                <a href="services.html" class="banner-btn"><span>خدمات ما را کاوش کنید<i
-                        class="fa-solid fa-arrow-up-right"></i></span></a>
+                <a class="banner-btn"><span><p style="font-size: x-large">NetX</p></span></a>
             </div>
             <div class="creative-agency">
                 <div class="position-relative d-block text-center m-auto video-img">
@@ -484,7 +378,7 @@
             <span class="top-title">سوالات متداول</span>
             <h2>چگونه با ما کار با کیفیت داشته باشیم</h2>
         </div>
-        <div class="faq-img" data-cues="slideInUp"><img src="{% static 'assets/images/faq-img.jpg" alt="faq-img' %}">
+        <div class="faq-img" data-cues="slideInUp"><img src="{% static 'assets/images/faq-img.jpg' %}" alt="faq-img">
         </div>
         <div class="accordion accordion-content" id="accordionExample" data-cues="slideInUp">
             <div class="accordion-item">
